; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ldns/extr_rdata.c_ldns_rdf_clone.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ldns/extr_rdata.c_ldns_rdf_clone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ldns_rdf_clone(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp ne i32* %3, null
  %5 = zext i1 %4 to i32
  %6 = call i32 @assert(i32 %5)
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @ldns_rdf_get_type(i32* %7)
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @ldns_rdf_size(i32* %9)
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @ldns_rdf_data(i32* %11)
  %13 = call i32* @ldns_rdf_new_frm_data(i32 %8, i32 %10, i32 %12)
  ret i32* %13
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @ldns_rdf_new_frm_data(i32, i32, i32) #1

declare dso_local i32 @ldns_rdf_get_type(i32*) #1

declare dso_local i32 @ldns_rdf_size(i32*) #1

declare dso_local i32 @ldns_rdf_data(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
